--- a/src/components/Event/Events.css
+++ b/src/components/Event/Events.css
@@ -1,5 +1,6 @@
 #events{
     background: url("../Design/space.jpeg");
+    background-attachment: fixed;
 }
 .EventHead{
     color: rgb(255, 255, 255);
