--- a/src/components/Team/Sponsors.module.css
+++ b/src/components/Team/Sponsors.module.css
@@ -5,6 +5,7 @@
   height: 100%;
   overflow: hidden;
   background: url("../Design/space.jpeg");
+  background-attachment: fixed;
 }
 .sidebar {
   height: 100%;
